# ida-print-kiosk

./: .gitignore  INSTALL.Print_Driver_and_Utils  PRINTER-SUPPORT  README
c/ncurses-ex/: Makefile  totalsolde.c
cups-mysql/: CUPS-MYSQL-INSTALL.txt  CUPS-MYSQL.txt  page_log_to_mysql.sh
doc/: install LAMP-phpmyadmin Centos7.docx
mariadb/: INSTALL-CONNECTOR  SQL-COMMANDS  photokopi.cpp
mariadb/examples/: test_config.h
mariadb/examples-MariaCpp/: CMakeLists.txt  Makefile  Olivier  Olivier.cpp  bandung  bengkulu.cpp  test-mariaCpp  test-mariaCpp.cpp  toulouse.cpp  yantimysql.cpp
mariadb/examples-MariaCpp/test/: CTestTestfile.cmake  cmake_install.cmake  connect.cpp  prepstmtc.cpp  prepstmtcpp
mariadb/examples-mariadb++/: GeneralTest.cpp  Makefile  SkeletonTest.h  StructureTest.cpp  StructureTest.h  account.cpp  mysgl++.cpp  test_blsi.cpp  yantimysql.cpp
mysql/: Makefile  README  cppconn-ex1.cc  cppconn-ex2.cc  photocopy.cpp
not-used/c++-and-mariadb/: Makefile  photocopy.cpp  photokopi.cpp
not-used/c++-and-mariadb/examples-MariaCpp/: CMakeCache.txt  CMakeLists.txt  HOW-TO-COMPILE-MARIACPP-CODE.txt  Makefile  bandung.cpp  cmake_install.cmake
not-used/c++-and-mariadb/examples-MariaCpp/test/: example.cpp  prepstmtcpp.cpp  query.cpp  threads.cpp
not-used/c++-and-mariadb/examples-mariadb++/: GeneralTest.h  concurrency.cpp  yanti.cpp
print/: CUPS-COMMANDS  CUPS-MYSQL  INSTALLATION-PRINTER.Dell_1355cn_Color_MFP.txt  PRINTER.Dell_1355cn_Color_MFP
printers/: PRINTER.Dell_1355cn_Color_MFP
www/: accueil.css  accueilcomplete.php  deconnect.php  form_input.css  login.css  login.php  solde.css  solde.php  user.css  user.php  user.sql  utilisateur.php  yanti.cpp
www/admin/: accueil.css  accueilcomplete.php  add_data.php  form_input.php  historique.sql  index.php  input_data.css  input_data.php  keep.php  login.php  page_log.sql  solde.css  solde.php  upload.css  upload.php  user.css  user.php  user.sql
www/admin/inc/: ida.mysql
www/inc/: db_connect1.php
